<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AddNewRecipeActivity">

    <EditText
        android:id="@+id/editTextCocktailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/recipe_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tools_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCocktailName" />

    <EditText
        android:id="@+id/editTextInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/instructions_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTools" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextInstructions" />


    <ImageView
        android:id="@+id/cocktailPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toEndOf="@+id/editTextCocktailName"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientRecyclerView"
        android:layout_width="201dp"
        android:layout_height="407dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/editTextInstructions"
        app:layout_constraintTop_toBottomOf="@+id/cocktailPicture" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="124dp"
        android:layout_height="77dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="53dp"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/ingredientRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>